Autenticación con Jwt

--- a/API_BD/appsettings.json
+++ b/API_BD/appsettings.json
@@ -4,6 +4,12 @@
     "cadenaSQL": "Server=DESKTOP-6QTKH2L\\SQLEXPRESS ;Database=WEB_API; Trusted_Connection=True;"
   },
 
+  "Jwt": {
+    "Key": "DesarrolloAPP2022.@",
+    "Issuer": "http://localhost:5025",
+    "Audience": "http://localhost:5025",
+    "Subject": "DesarrolloAPP"
+  },
 
   "Logging": {
     "LogLevel": {
